# surge

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  GitVersion.yml  LICENSE  README.md  surge-dev  vcpkg.json
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
crates/surge-bench/: Cargo.toml
crates/surge-bench/examples/: diff_bench.rs
crates/surge-bench/src/: main.rs  payload.rs  report.rs  runner.rs
crates/surge-bench/src/payload/: mod.rs  mutations.rs  rng.rs  specs.rs  synthetic.rs
crates/surge-bench/src/runner/: fs_compare.rs  installer.rs  manifest.rs  microbench.rs  mod.rs  update.rs
crates/surge-cli/: Cargo.toml
crates/surge-cli/src/: bootstrap.rs  cli.rs  envfile.rs  formatters.rs  logline.rs  main.rs  prompts.rs  ui.rs
crates/surge-cli/src/commands/: compact.rs  demote.rs  fleet_status.rs  init.rs  install.rs  list.rs  lock.rs  migrate.rs  mod.rs  pack.rs  promote.rs  push.rs  restore.rs  setup.rs  status.rs  tailscale.rs  tune.rs
crates/surge-cli/src/commands/fleet_status/: probe.rs  tailscale.rs
crates/surge-cli/src/commands/install/: local.rs  mod.rs  profile.rs  progress.rs  releases.rs  remote.rs  resolution.rs  runtime.rs  selection.rs
crates/surge-cli/src/commands/install/compatibility/: evaluation.rs  fingerprint.rs  mod.rs
crates/surge-cli/src/commands/install/remote/: activation.rs  execution.rs  installer_stage.rs  mod.rs  published_installer.rs  runtime.rs  stage_manifest.rs  staging.rs  state.rs  types.rs  watchdog.rs
crates/surge-cli/src/commands/pack/: installers.rs  launchers.rs  progress.rs  resolution.rs  upload.rs
crates/surge-cli/src/commands/push/: checkpoint.rs
crates/surge-cli/src/commands/setup/: convergence.rs  status.rs
crates/surge-cli/tests/: init_wizard.rs  migrate_snapx_compat.rs  sha256.rs
crates/surge-core/: Cargo.toml  build.rs  vendor
crates/surge-core/src/: context.rs  error.rs  install.rs  installer_bundle.rs  installer_package.rs  lib.rs  net.rs  storage_config.rs
crates/surge-core/src/archive/: extractor.rs  mod.rs  packer.rs
crates/surge-core/src/config/: constants.rs  installer.rs  manifest.rs  mod.rs
crates/surge-core/src/config/manifest/: lookup.rs  mod.rs  normalize.rs  types.rs  validate.rs
crates/surge-core/src/crypto/: hmac_sha256.rs  mod.rs  sha256.rs
crates/surge-core/src/diff/: bsdiff_sys.rs  chunked.rs  mod.rs  wrapper.rs
crates/surge-core/src/download/: manager.rs
crates/surge-core/src/install/: activation.rs  launch.rs  mod.rs  persistent_assets.rs  runtime_manifest.rs
crates/surge-core/src/lock/: mutex.rs
crates/surge-core/src/pack/: builder.rs
crates/surge-core/src/pack/builder/: delta.rs  full.rs  release_index.rs  staging.rs  toolchain.rs
crates/surge-core/src/platform/: detect.rs  fs.rs  mod.rs  paths.rs  process.rs  semaphore.rs  shortcuts.rs
crates/surge-core/src/platform/shortcuts/: linux.rs  macos.rs  shared.rs  windows.rs
crates/surge-core/src/releases/: artifact_cache.rs  channel.rs  delta.rs  manifest.rs  mod.rs  restore.rs  version.rs
crates/surge-core/src/releases/delta/: archive.rs  format.rs  fs_apply.rs  mod.rs  sparse_ops.rs  tests.rs  tree.rs
crates/surge-core/src/releases/restore/: candidate.rs  planning.rs  recovery.rs  retention.rs
crates/surge-core/src/storage/: azure.rs  filesystem.rs  gcs.rs  github_releases.rs  mod.rs  s3.rs
crates/surge-core/src/storage/azure/: auth.rs  listing.rs  mod.rs  requests.rs
crates/surge-core/src/storage/gcs/: auth.rs  json_listing.rs  mod.rs  requests.rs  xml_listing.rs
crates/surge-core/src/supervisor/: mod.rs  state.rs  stub.rs  supervisor.rs
crates/surge-core/src/update/: manager.rs  status.rs
crates/surge-core/src/update/manager/: apply.rs  artifacts.rs  finalize.rs  lifecycle.rs  progress.rs  progress_substep.rs  release_index.rs
crates/surge-core/src/update/manager/apply/: base.rs  delta.rs  installed_app.rs
crates/surge-core/src/update/status/: handoff.rs  worker.rs
crates/surge-core/tests/: snapx_compat.rs  unsafe_boundaries.rs
crates/surge-ffi/: Cargo.toml
crates/surge-ffi/src/: context.rs  diff.rs  handles.rs  lib.rs  pack.rs  releases.rs  shared.rs  update.rs  utils.rs
crates/surge-installer/: Cargo.toml
crates/surge-installer-ui/: Cargo.toml
crates/surge-installer-ui/src/: app.rs  install.rs  main.rs
crates/surge-installer-ui/src/app/: icons.rs  mod.rs  screens.rs  theme.rs  widgets.rs
crates/surge-installer/src/: main.rs
crates/surge-supervisor/: Cargo.toml
crates/surge-supervisor/src/: child.rs  handoff.rs  main.rs  ownership.rs
demoapp/: Program.cs  demoapp.csproj
demoapp/.surge/: surge.yml
dev/bench/: data.js
docker/: Dockerfile
docs/: integrating-surge.md
docs/architecture/: cleanup-plan.md  maintainability-baseline.txt  maintainability.md
docs/performance/: README.md  benchmark-profiles.md  pack-policy.md  update-chains.md
dotnet/: Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Directory.Solution.props  Surge.slnx
dotnet/Surge.NET/: Compatibility.cs  ISurgeChannelReleases.cs  NativeMethods.cs  README.md  SemanticVersions.cs  Surge.NET.csproj  SurgeApp.cs  SurgeAppInfo.cs  SurgeProgress.cs  SurgeRelease.cs  SurgeResourceBudget.cs  SurgeUpdateManager.cs  SurgeUpdateStatus.cs
dotnet/Surge.NET.AotSmoke/: Program.cs  Surge.NET.AotSmoke.csproj
dotnet/Surge.NET.Tests/: NativeMethodsTests.cs  Surge.NET.Tests.csproj  SurgeTests.cs  SurgeUpdateStatusTests.cs
include/surge/: surge_api.h
scripts/: build-linux-arm64-ubuntu18.sh  check-glibc-baseline.sh  check-maintainability.sh  check-version-sync.sh  set-release-version.sh  stage-toolchain-artifact.sh  sync-surge-core-vendor.sh  version-lib.sh
src/api/: surge_api.cpp
tests/: CMakeLists.txt  test_archive.cpp  test_bsdiff.cpp  test_c_api.cpp  test_channel.cpp  test_checksum.cpp  test_manifest.cpp  test_pack.cpp  test_releases.cpp  test_storage_azure.cpp  test_storage_gcs.cpp  test_storage_s3.cpp  test_supervisor.cpp  test_update_manager.cpp
(+94 files in other folders)
