[package]
name = "surge-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark tool for the Surge update framework"

[[bin]]
name = "surge-bench"
path = "src/main.rs"

[dependencies]
surge-core = { path = "../surge-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
