[package]
name = "surge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the Surge update framework"

[[bin]]
name = "surge"
path = "src/main.rs"

[dependencies]
surge-core = { path = "../surge-core" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
