[package]
name = "surge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for the Surge update framework"

[[bin]]
name = "surge"
path = "src/main.rs"

[dependencies]
surge-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true
