[package]
name = "surge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for the Surge update framework"
include = [
    "src/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE*",
    "vendor/**/*.c",
    "vendor/**/*.h",
    "vendor/**/*.cmake",
]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
percent-encoding = { workspace = true }
quick-xml = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process", "fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_Storage_FileSystem"] }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[lints]
workspace = true
