[package]
name = "surge-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C API (cdylib) for the Surge update framework"

[lib]
name = "surge"
crate-type = ["cdylib"]

[dependencies]
surge-core = { path = "../surge-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
