[package]
name = "surge-installer-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graphical installer for Surge applications"

[[bin]]
name = "surge-installer-ui"
path = "src/main.rs"

[dependencies]
surge-core = { workspace = true }
tempfile = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
serde_yaml = { workspace = true }
resvg = { version = "0.45", default-features = false }

[lints]
workspace = true
