[package]
name = "surge-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded installer launcher for Surge"

[[bin]]
name = "surge-installer"
path = "src/main.rs"

[dependencies]
surge-core = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
