[package]
name = "surge-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Process supervisor for the Surge update framework"

[[bin]]
name = "surge-supervisor"
path = "src/main.rs"

[dependencies]
surge-core = { path = "../surge-core", version = "0.1.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }

[lints]
workspace = true
